# eyeRec

./: .gitignore  README.md  pyproject.toml  requirements.txt
eyewear_recommendation_system/: .gitignore  README.md  pyproject.toml
eyewear_recommendation_system/.kaggle/: import_dataset.py
eyewear_recommendation_system/configs/: feature_schema.yaml  model_sources.yaml  paths.yaml
eyewear_recommendation_system/data/eyewear_catalog/: eyewear_items.csv
eyewear_recommendation_system/outputs/recommendations/: top3_recommendations.json
eyewear_recommendation_system/scripts/: eyerec_gui.py  run_pipeline.py  run_single_node.py
eyewear_recommendation_system/src/eyewear_system/: main.py
eyewear_recommendation_system/src/eyewear_system/feature_nodes/: base_node.py  eye_color_node.py  eye_shape_node.py  face_shape_node.py  pupil_distance_node.py
eyewear_recommendation_system/src/eyewear_system/model_adapters/: __init__.py  landmark_adapter.py  roboflow_adapter.py  (+2 more)
eyewear_recommendation_system/tests/: test_feature_aggregator.py  test_feature_nodes.py  test_pipeline.py  test_recommender.py
train_eyeColor/: .gitignore  README.md  pyproject.toml  requirements.txt
train_eyeColor/configs/: label_mapping.yaml  train_config.yaml
train_eyeColor/data/raw/: README.md
train_eyeColor/scripts/: evaluate_eye_color.py  export_to_app.py  predict_eye_color.py  prepare_dataset.py  train_eye_color.py
train_eyeColor/src/train_eye_color/: __init__.py  datasets.py  evaluate.py  export_model.py  model.py  predict.py  train.py  utils.py
train_eyeColor/tests/: test_dataset_loading.py  test_label_mapping.py  test_model_forward.py
train_eyeShape/: .gitignore  README.md  pyproject.toml
train_eyeShape/configs/: label_mapping.yaml  train_config.yaml
train_eyeShape/data/raw/: README.md  SOURCE.md
train_eyeShape/scripts/: evaluate_eye_shape.py  export_to_app.py  predict_eye_shape.py  prepare_dataset.py  train_eye_shape.py
train_eyeShape/src/train_eye_shape/: __init__.py  datasets.py  evaluate.py  export_model.py  predict.py  train.py
train_eyeShape/tests/: test_dataset_loading.py  test_label_mapping.py  test_model_forward.py
train_faceShape/: .gitignore  README.md  pyproject.toml
train_faceShape/configs/: label_mapping.yaml  train_config.yaml
train_faceShape/data/raw/: README.md  SOURCE.md
train_faceShape/scripts/: evaluate_face_shape.py  export_to_app.py  predict_face_shape.py  prepare_dataset.py  train_face_shape.py
train_faceShape/src/train_face_shape/: __init__.py  datasets.py  evaluate.py  export_model.py  predict.py  train.py  utils.py
train_faceShape/tests/: test_dataset_loading.py  test_label_mapping.py  test_model_forward.py
train_pupilDistance/: .gitignore  README.md  pyproject.toml  requirements.txt
train_pupilDistance/artifacts/exported/: pupil_diameter_model.pt
train_pupilDistance/configs/: train_config.yaml
train_pupilDistance/data/raw/: README.md  SOURCE.md
train_pupilDistance/scripts/: evaluate_pupil_distance.py  export_to_app.py  predict_pupil_distance.py  prepare_dataset.py  train_pupil_distance.py
train_pupilDistance/src/train_pupil_distance/: __init__.py  datasets.py  evaluate.py  export_model.py  model.py  predict.py  train.py
train_pupilDistance/tests/: test_dataset_loading.py  test_model_forward.py
(+32 files in other folders)
