[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "eyewear-recommendation-system"
version = "0.1.0"
description = "Placeholder scaffold for an eyewear recommendation pipeline."
requires-python = ">=3.10"
dependencies = [
  "numpy",
  "pandas",
  "opencv-python",
  "Pillow",
  "PyYAML",
  "torch",
  "torchvision",
]

[project.optional-dependencies]
dev = ["pytest"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
