[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "eyewear-recommendation-system"
version = "0.1.0"
description = "Placeholder scaffold for an eyewear recommendation pipeline."
requires-python = ">=3.10,<3.13"
dependencies = [
  "numpy==1.26.4",
  "pandas==2.2.2",
  "opencv-python==4.10.0.84",
  "Pillow==10.4.0",
  "PyYAML==6.0.2",
  "torch==2.3.1",
  "torchvision==0.18.1",
]

[project.optional-dependencies]
dev = ["pytest==8.3.2"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
