[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "train-eye-color"
version = "0.1.0"
description = "Local-only PyTorch training workspace for an EyeRec eye color classifier."
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "torch",
  "torchvision",
  "numpy",
  "pandas",
  "Pillow",
  "PyYAML",
  "opencv-python",
  "scikit-learn",
  "tqdm",
]

[tool.setuptools.packages.find]
where = ["src"]
