[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "train-pupil-distance"
version = "0.1.0"
description = "Local-only PyTorch training workspace for an EyeRec pupil distance regressor."
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "torch",
  "torchvision",
  "numpy",
  "pandas",
  "Pillow",
  "PyYAML",
  "scikit-learn",
  "tqdm",
]

[tool.setuptools.packages.find]
where = ["src"]
